# ChatProject

./: README.md
ChatServer/: ChatServer.sln
ChatServer/ChatServer/: AsioIOServicePool.h  CServer.cpp  CServer.h  CSession.h  ChatServer.vcxproj  LogicSystem.cpp  LogicSystem.h  RedisMgr.cpp  RedisMgr.h  UserMgr.cpp  UserMgr.h  config.ini  start.bat
ChatServer2/ChatServer/: AsioIOServicePool.cpp  CServer.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServer.cpp  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServiceImpl.cpp  ChatServiceImpl.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  config.ini
GateServer/: GateServer.sln
GateServer/GateServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  GateServer.vcxproj  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  PropertySheet.props  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.h  config.ini  const.h
StatusServer/: StatusServer.sln
StatusServer/StatusServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  StatusServer.vcxproj  StatusServer.vcxproj.filters  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini
VerifyServerPython/: emailsend.py  message_pb2.py  message_pb2_grpc.py  redismanager.py  server.py
llfcchat/: CMakeLists.txt  CMakeUserPresets.json  adduseritem.ui  applyfriend.cpp  applyfriend.ui  applyfrienditem.h  applyfrienditem.ui  applyfriendpage.cpp  applyfriendpage.ui  authenfriend.cpp  authenfriend.ui  bubbleframe.cpp  bubbleframe.h  charuserlist.cpp  charuserlist.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatuserwid.cpp  chatuserwid.h  chatuserwid.ui  chatview.cpp  chatview.h  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  clickedoncelabel.h  contactuserlist.cpp  contactuserlist.h  conuseritem.ui  customizeedit.h  findfaildlg.cpp  (+41 more)
llfcchat/style/: stylesheet.qss
